css수정 및 돌보미 리스트 카테고리 수정

--- a/src/pages/css/Apply.css
+++ b/src/pages/css/Apply.css
@@ -92,7 +92,7 @@
 .apply-input,
 .apply-select,
 .apply-textarea {
-  width: 100%;
+  /* width: 100%; */
   padding: 0.45rem 0.75rem;
   font-size: 0.9rem;
   border-radius: 0.6rem;
